Fix spacing in the header and context selector

--- a/src/components/core/Header/styles.less
+++ b/src/components/core/Header/styles.less
@@ -19,7 +19,9 @@
 
         .startContainer, .asideContainer {
             > button {
-                margin-right: .grid-unit(2px)[];
+                margin-right: .grid-unit(1px)[];
+                width: .grid-unit(6px)[];
+                height: .grid-unit(6px)[];
             }
 
             :last-child, :only-child {
@@ -28,7 +30,7 @@
         }
 
         .startContainer {
-            margin-right: .grid-unit(2px)[];
+            margin-right: .grid-unit(1px)[];
         }
 
         .fusionTitleContainer {
@@ -43,6 +45,8 @@
         .startContainer, .asideContainer {
             > button {
                 margin-right: .grid-unit(1px)[];
+                width: .grid-unit(4px)[];
+                height: .grid-unit(4px)[];
             }
 
             :last-child, :only-child {
@@ -82,7 +86,7 @@
 }
 
 .fusionLogo {
-    margin-right: .grid-unit(2px)[];
+    margin-right: .grid-unit(1px)[];
 }
 
 .fusionTitleContainer {
@@ -103,8 +107,6 @@
 
 .startContainer, .asideContainer {
     > button {
-        min-width: .grid-unit(6px)[];
-        height: .grid-unit(6px)[];
         background: none;
         border: none;
         outline: none;
@@ -113,7 +115,7 @@
         align-items: center;
         justify-content: center;
         margin: 0;
-        padding: 0 .grid-unit(2px)[];
+        padding: 0;
         box-sizing: border-box;
         color: var(--color-black-alt2);
     }
